[package]
name = "telephone_line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1.17.1"
rand = "0.8"
regex = "1.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
